---------------------------------------------------------------------------------------------------
Version: 1.3.21
Date: ????

  Features:
    - Milestones presets can now mark milestones as "hidden". These milestones are still tracked but will only appear in the GUI after they are reached.

  Changes:
    - Added a couple hidden milestones for spoiler things to SE default presets. Removed "(No spoilers)" from the name of the presets. The name change will cause a "detected a new preset" message on save file load, but you can ignore it.

  Locale:
    - Added Czech translation thanks to Bakendrid.
    - Translation updates for French and Chinese.

---------------------------------------------------------------------------------------------------
Version: 1.3.20
Date: 2023-08-15

  Changes:
    - Added plague rocket to default SE presets.
    - Removed some overly verbose log lines.

  Bugfixes:
    - Fixed turning off an infinite milestone in settings not actually applying the change.
    - Fixed milestones added as part of an infinite milestone not editing the right milestone when trying to edit the estimation time.

  Compatibility:
    - Presets provided via remote interface now have priority over default presets. This means other mods can override default presets.

---------------------------------------------------------------------------------------------------
Version: 1.3.19
Date: 2023-07-14

  Changes:
    - Removed built-in Sea Block presets, in favor of Sea Block's own preset provided by their mod.

  Bugfixes:
    - Fixed crash when loading a preset with invalid aliases.

  Locale:
    - Added Spanish translation thanks to Frodo45127.
    - Added Polish translation thanks to wuka.
    - Updated Japanese translation thanks to YAMATO_Hajime.

---------------------------------------------------------------------------------------------------
Version: 1.3.18
Date: 2023-05-20

  Features: